--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,58 +1,56 @@
-@import "@styles/settings/_settings";
+@import '@styles/settings/_settings';
 
 .header {
-  width: 100%;
-  font-size: 1em;
-  color: white;
-  background-color: black;
-  padding: 1em 0;
-  margin: 0;
+	width: 100%;
+	font-size: 1em;
+	color: white;
+	background-color: black;
+	padding: 1em 0;
+	margin: 0;
 }
 
 .headerContainer {
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
 }
 
 .headerTitle {
-  font-size: 1.6em;
-  font-weight: bold;
-  margin: 0;
+	font-size: 1.6em;
+	font-weight: bold;
+	margin: 0;
 }
 
 .headerLogo {
-  height: 1.6em;
+	height: 1.6em;
 }
 
 .headerLinks {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+	display: flex;
+	list-style: none;
+	padding: 0;
+	margin: 0;
 
-  li {
-    margin: 0 0.8em;
+	li {
+		margin: 0 0.8em;
 
-    &:first-child {
-      margin-left: 0;
-    }
+		&:first-child {
+			margin-left: 0;
+		}
 
-    &:last-child {
-      margin-right: 0;
-    }
-  }
+		&:last-child {
+			margin-right: 0;
+		}
+	}
 
-  a {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+	a {
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
 
-    svg {
-      margin-right: 0.4em;
-    }
-  }
+		svg {
+			margin-right: 0.4em;
+		}
+	}
 }
